Define a color palette.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
-body {
-  background: gold;
+:root {
+  --color-primary: #2584ff;
+  --color-secondary: #00d9ff;
+  --color-accent: #ff3400;
+  --color-headings: #210e6b;
+  --color-body: #918ca4;
 }
