--- a/css/styles.css
+++ b/css/styles.css
@@ -152,3 +152,23 @@ a {
     padding-left: 0;
   }
 }
+
+/* Icons */
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-container {
+  align-items: center;
+  background: #f3f9fa;
+  border-radius: 100%;
+  display: inline-flex;
+  height: 60px;
+  justify-content: center;
+  width: 60px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
