--- a/css/styles.css
+++ b/css/styles.css
@@ -296,3 +296,56 @@ a {
   background: var(--color-secondary);
   color: #fff;
 }
+
+.card--secondary .badge--secondary {
+  background: #01cdf0;
+}
+
+/* Plans */
+.plan__name {
+  color: #fff;
+  font-size: 2.4rem;
+  margin: 0;
+}
+
+.plan__price {
+  font-size: 6rem;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  font-weight: 300;
+  margin-right: 10px;
+  opacity: 0.8;
+}
+
+.plan__description {
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  display: inline-block;
+}
+
+.plan .list__item {
+  margin-bottom: 2rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.5rem;
+  }
+
+  .plan__price {
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__description {
+    font-size: 1.7rem;
+  }
+}
