--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --color-headings: #210e6b;
   --color-body: #918ca4;
   --color-border: #ccc;
+  --color-body-darker: #5c5577;
   --border-radius: 30px;
 }
 
@@ -375,4 +376,38 @@ a {
 .media__image {
   margin-top: 1rem;
   margin-right: 2rem;
+}
+
+/* Quotes */
+.quote {
+  color: var(--color-body-darker);
+  font-size: 2.5rem;
+  font-style: italic;
+  margin: 0;
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote__title {
+  margin: 0;
+}
+
+.quote__company {
+  font-size: 2rem;
+  opacity: 0.4;
+}
+
+.quote__line {
+  transform: translateY(-15px);
+}
+
+.quote__title,
+.quote__company {
+  font-style: normal;
 }
