--- a/css/styles.css
+++ b/css/styles.css
@@ -172,8 +172,21 @@ a {
   width: 60px;
 }
 
+.icon-container--accent {
+  background: var(--color-accent);
+}
+
 .icon--primary {
   fill: var(--color-primary);
+}
+
+.icon--white {
+  fill: #fff;
+}
+
+.icon--small {
+  height: 30px;
+  width: 30px;
 }
 
 /* Buttons */
@@ -426,5 +439,43 @@ a {
 @media screen and (min-width: 1024px) {
   .grid--1x3 {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* Testimonial */
+.testimonial {
+  padding: 3rem;
+}
+
+.testimonial__image > img {
+  width: 100%;
+}
+
+.testimonial__image {
+  position: relative;
+}
+
+.testimonial__image .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -30px;
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial__image {
+    margin-right: 6rem;
+  }
+
+  .testimonial .quote {
+    margin: 2rem 0;
+    font-size: 2rem;
+  }
+
+  .testimonial .quote__company {
+    font-size: 1.8rem;
+  }
+
+  .testimonial .quote__title {
+    font-size: 2.4rem;
   }
 }
