--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,11 @@ p {
   margin-top: 0;
 }
 
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
 @media screen and (min-width: 1024px) {
   body {
     font-size: 1.8rem;
@@ -556,4 +561,37 @@ a {
 .collapsible--expanded .collapsible__content {
   max-height: 100%;
   opacity: 1;
+}
+
+/* Block */
+.block {
+  --vertical-padding: 6rem;
+  padding: var(--vertical-padding) 2rem;
+  border: 2px solid red;
+}
+
+.block__heading {
+  margin-top: 0;
+}
+
+.block--dark {
+  background: #000;
+}
+
+.block--dark .block__heading {
+  color: #fff;
+}
+
+.block__header {
+  text-align: center;
+}
+
+.block--skewed-right {
+  padding-bottom: calc(var(--vertical-padding) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+}
+
+.block--skewed-left {
+  padding-bottom: calc(var(--vertical-padding) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
