--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,13 @@ a {
   white-space: nowrap;
 }
 
+.btn .icon {
+  height: 25px;
+  margin-right: 10px;
+  vertical-align: middle;
+  width: 25px;
+}
+
 .btn--primary {
   background: var(--color-primary);
   color: #fff;
@@ -685,5 +692,34 @@ a {
 
   .hero__tagline {
     font-size: 2.2rem;
+  }
+}
+
+/* Block domain */
+.block-domain .input-group {
+  border: 0;
+  box-shadow: 0 0 30px 20px #e6ebee;
+  margin: 4rem auto;
+  max-width: 700px;
+}
+
+.block-domain__prices {
+  color: var(--color-headings);
+  display: grid;
+  font-size: 2rem;
+  font-weight: 600;
+  grid-template: repeat(3, 6rem) / repeat(2, 1fr);
+  justify-items: center;
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .block-domain__prices {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+
+  .block-domain .btn {
+    padding: 2rem 3vw;
   }
 }
