--- a/css/styles.css
+++ b/css/styles.css
@@ -757,3 +757,33 @@ a {
 .block-plans .plan--popular {
   padding: 0 1rem;
 }
+
+/* Block Features */
+
+.feature {
+  gap: 4rem 2rem;
+  margin-bottom: 12rem;
+}
+
+.feature__heading {
+  margin-top: 1rem;
+  font-size: 2.8rem;
+}
+
+.feature__image {
+  width: 100%;
+}
+
+.feature:first-of-type {
+  margin-top: 6rem;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content {
+    order: 1;
+  }
+
+  .feature__heading {
+    font-size: 2.4rem;
+  }
+}
