--- a/css/styles.css
+++ b/css/styles.css
@@ -814,3 +814,86 @@ a {
     grid-template-columns: 50% 50%;
   }
 }
+
+/* Footer */
+.footer {
+  background: #232323;
+}
+
+.footer__heading {
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.footer__section {
+  padding: 2rem 0;
+  border-bottom: 1px solid #393939;
+}
+
+.footer__brand {
+  margin-top: 5rem;
+  text-align: center;
+}
+
+.footer__brand > img {
+  width: 100%;
+  max-width: 230px;
+  transform: translateY(10px);
+}
+
+.footer__copyright {
+  color: #fff;
+  opacity: 0.5;
+  font-size: 1.8rem;
+}
+
+.footer__list {
+  margin: 0;
+}
+
+.footer__item > a {
+  color: #777;
+  transition: color 0.5s;
+}
+
+.footer__item > a:hover {
+  color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .footer .grid {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+
+  .footer .collapsible__toggler {
+    display: none;
+  }
+
+  .footer .collapsible__content {
+    max-height: 100%;
+    opacity: 1;
+  }
+
+  .footer__section {
+    border: 0;
+    padding: 0 2rem;
+  }
+
+  .footer__brand {
+    order: -1;
+    margin-top: 0;
+    transform: translateY(-20px);
+  }
+
+  .footer__copyright {
+    font-size: 1.5rem;
+  }
+
+  .footer__heading {
+    font-size: 2rem;
+  }
+
+  .footer__item > a {
+    font-size: 1.8rem;
+  }
+}
