--- a/css/styles.css
+++ b/css/styles.css
@@ -522,7 +522,8 @@ a {
 .callout {
   border-radius: 5px;
   color: #fff;
-  padding: 2rem;
+  padding: 4rem 3rem;
+  transform: translateY(50px);
 }
 
 .callout__content {
@@ -818,10 +819,12 @@ a {
 /* Footer */
 .footer {
   background: #232323;
+  padding-top: 10rem;
 }
 
 .footer__heading {
   color: #fff;
+  font-size: 2.5rem;
   text-transform: uppercase;
 }
 
@@ -885,15 +888,20 @@ a {
     transform: translateY(-20px);
   }
 
+  .footer__list {
+    margin: 0;
+    line-height: 1.3;
+  }
+
   .footer__copyright {
     font-size: 1.5rem;
   }
 
   .footer__heading {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   .footer__item > a {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 }
